--- a/src/components/main-page/Real-benefit/styles.module.scss
+++ b/src/components/main-page/Real-benefit/styles.module.scss
@@ -104,6 +104,50 @@
   width: 100%;
 }
 
+.cart_mobile {
+  display: none;
+
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 20px;
+    gap: 10px;
+    border: 1px solid #d5d5d5;
+    border-radius: 10px;
+
+    .cart_img {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      width: 100%;
+      justify-content: flex-start;
+      gap: 5px;
+
+      text-align: left;
+
+      img {
+        height: 30px;
+        width: 30px;
+      }
+
+      h2 {
+        font-family: Roboto, sans-serif;
+        color: #494857;
+        font-weight: 600;
+        font-size: 20px;
+      }
+    }
+    .cart_text_mobile {
+      p {
+        text-align: left !important;
+        font-family: Roboto, sans-serif;
+        color: #494857;
+      }
+    }
+  }
+}
+
 .cart {
   padding-top: 40px;
   display: flex;
@@ -131,11 +175,7 @@
   }
 
   @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 25px 20px;
-    gap: 20px;
+    display: none;
   }
 
   @media (max-width: 480px) {
@@ -335,7 +375,9 @@
 // Адаптивность для очень маленьких экранов
 @media (max-width: 480px) {
   .title {
-    font-size: 24px;
+    font-size: 30px;
+    text-align: left;
+    max-width: 200px;
   }
 
   .cart {
