--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,15 @@
 :root {
-	--accent-color1: #ff9933;
+	--accent-color1: #ff9a22;
+	--accent-hover1: #e68a29;
 	--layer-color1: #e5eef2;
 	--layer-color2: #57889f;
+	/* --layer-color2: #3289a1; */
 	--footer-color: #494857;
 }
 
 html,
 body {
+	position: relative;
 	background: #f5f5f5;
 	max-width: 100vw;
 	overflow-x: hidden;
