--- a/src/components/main-page/Services/styles.module.scss
+++ b/src/components/main-page/Services/styles.module.scss
@@ -14,7 +14,7 @@
 		line-height: 56px;
 		letter-spacing: 0%;
 		padding-top: 52px;
-		text-align: center;
+		text-align: left;
 	}
 
 	.grid {
@@ -99,37 +99,37 @@
 		&_img {
 			height: 250px;
 			flex: 1;
+			border-top-left-radius: 30px;
+			overflow: hidden;
 
 			img {
 				width: 100%;
 				height: 100%;
 				object-fit: cover;
-				border-top-left-radius: 10px;
-				border-top-right-radius: 10px;
 			}
 		}
 
 		&_desc {
-			min-height: 50px;
+			height: 35px;
 			background-color: var(--layer-color1);
 			border-bottom-right-radius: 100px;
 			display: flex;
 			align-items: center;
-			padding: 10px 0;
+			padding: 10px 30px;
 
-			@media (max-width: 992px) {
-				border-bottom-right-radius: 10px;
-				border-bottom-left-radius: 10px;
-			}
+			// @media (max-width: 992px) {
+			// 	border-bottom-right-radius: 10px;
+			// 	border-bottom-left-radius: 10px;
+			// }
 
 			p {
-				padding-left: 20px;
 				color: rgba(73, 72, 87, 1);
 				font-family: Roboto;
 				font-size: 18px;
 				font-weight: 400;
-				line-height: 1.4;
-				margin: 0;
+				line-height: 21.6px;
+				letter-spacing: 0px;
+				text-align: left;
 			}
 		}
 	}
