--- a/src/components/layout/header/styles.module.scss
+++ b/src/components/layout/header/styles.module.scss
@@ -187,6 +187,11 @@
 	z-index: 999;
 	transition: right 0.4s ease;
 	padding-top: 80px;
+	&_cross {
+		position: absolute;
+		top: 20px;
+		right: 0;
+	}
 
 	@media (max-width: 992px) {
 		width: 400px;
