--- a/src/components/one-service-page/OneService.scss
+++ b/src/components/one-service-page/OneService.scss
@@ -18,11 +18,28 @@
 	line-height: 56px;
 }
 .one-service-img {
+	border-top-left-radius: 150px;
+	border-bottom-right-radius: 150px;
+	border: 10px solid var(--layer-color1);
+	max-height: 400px;
+	overflow: hidden;
 	img {
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+		object-position: right;
 	}
 }
 .one-service-description {
+	padding-top: 57px;
+	p {
+		padding-bottom: 30px;
+		color: rgba(73, 72, 87, 1);
+		font-family: Roboto;
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 21.6px;
+		letter-spacing: 0px;
+		text-align: left;
+	}
 }
