--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,8 @@
 	--accent-color1: #ff9a22;
 	--accent-hover1: #e68a29;
 	--layer-color1: #e5eef2;
-	--layer-color2: #57889f;
-	/* --layer-color2: #3289a1; */
+	/* --layer-color2: #57889f; */
+	--layer-color2: #3289a1;
 	--footer-color: #494857;
 	--border-color1: #58899f;
 }
