--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -28,7 +28,6 @@
 		box-sizing: border-box;
 		border: 16px solid var(--layer-color2);
 		box-shadow: 4px 4px 2px 0px rgba(204, 204, 204, 1);
-
 		border-radius: 50px;
 		width: 100%;
 		max-width: 1200px;
@@ -41,11 +40,12 @@
 	}
 }
 .footer-banner {
-	@media (max-width: 1200px) {
-		width: 1024px;
+	max-width: 1280px;
+	@media (max-width: 1280px) {
+		width: calc(100% - 40px);
 		padding: 20px 10px;
 	}
-	@media (max-width: 1024px) {
+	@media (max-width: 1200px) {
 		width: calc(100% - 40px);
 		height: auto;
 	}
@@ -218,9 +218,9 @@
 			display: none;
 		}
 		img {
-			@media (max-width: 1200px) {
-				width: 100%;
-				height: 100%;
+			@media (max-width: 1170px) {
+				width: 115%;
+				height: 115%;
 			}
 		}
 	}
