--- a/src/components/contacts-page/contacts/Contacts.scss
+++ b/src/components/contacts-page/contacts/Contacts.scss
@@ -9,14 +9,29 @@
 		padding-top: 70px;
 		margin: 0 10px;
 	}
+	@media (max-width: 640px) {
+		margin-bottom: 250px;
+	}
+	@media (width: 1280px) and (height: 800px) {
+		margin-bottom: 100px;
+	}
+	@media (width: 1024px) and (height: 600px) {
+		margin-bottom: 200px;
+	}
+	@media (width: 375px) and (height: 667px) {
+		margin-bottom: 450px;
+	}
+	@media (width: 320px) and (height: 568px) {
+		margin-bottom: 600px;
+	}
 }
 .contacts-container {
 	width: 100%;
-	max-width: 1280px;
+	max-width: 1240px;
 	margin: 0 auto;
 }
 .contacts-title {
-	padding: 52px 0;
+	padding: 52px 0 45px;
 	color: rgba(73, 72, 87, 1);
 	font-size: 56px;
 	font-weight: 700;
@@ -35,9 +50,10 @@
 		font-family: Roboto;
 		font-size: 25px;
 		font-weight: 600;
-		line-height: 56px;
+		line-height: 25px;
 		letter-spacing: 0px;
 		text-align: left;
+		padding-bottom: 12px;
 	}
 
 	// .contacts-info__box-title-phone
@@ -45,9 +61,9 @@
 	&__box-title-phone {
 		color: rgba(73, 72, 87, 1);
 		font-family: Roboto;
-		font-size: 16px;
-		font-weight: 500;
-		line-height: 17px;
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 20px;
 		letter-spacing: 0px;
 		text-align: left;
 	}
@@ -57,11 +73,55 @@
 	&__box-title-email {
 		color: rgba(73, 72, 87, 1);
 		font-family: Roboto;
-		font-size: 16px;
-		font-weight: 500;
-		line-height: 17px;
-		letter-spacing: 0px;
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 18px;
+
 		text-align: left;
+		padding-bottom: 35px;
+	}
+	&__tooltip1 {
+		background: url('/images/contacts/tooltip1.png') no-repeat;
+		width: 243px;
+		height: 146px;
+		position: absolute;
+		bottom: 59%;
+		right: 33%;
+		display: none;
+
+		@media (max-width: 768px) {
+			display: block;
+			left: 55%;
+			bottom: 50%;
+		}
+		@media (max-width: 640px) {
+			left: 50%;
+			top: 75%;
+			transform: translate(-50%, -50%);
+		}
+		@media (width: 375px) and (height: 667px) {
+			left: 50%;
+			top: 95%;
+			transform: translate(-50%, -50%);
+		}
+		@media (width: 320px) and (height: 568px) {
+			top: 125%;
+		}
+		img {
+			display: block;
+			margin: 10% auto 2%;
+		}
+		span {
+			width: 100%;
+			display: inline-block;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 16px;
+			font-weight: 400;
+			line-height: 19.2px;
+			letter-spacing: 0px;
+			text-align: center;
+		}
 	}
 	&__tooltip2 {
 		padding: 27px 26px 72px 41px;
@@ -113,6 +173,9 @@
 	overflow: visible;
 	@media (max-width: 1200px) {
 		top: 70px;
+	}
+	@media (max-width: 768px) {
+		visibility: hidden;
 	}
 
 	// .contacts-map__img
