--- a/src/components/main-page/Services/styles.module.scss
+++ b/src/components/main-page/Services/styles.module.scss
@@ -1,12 +1,12 @@
 .services {
 	background-color: var(--layer-color2);
-	padding-left: 15%;
-	padding-right: 15%;
+	padding-left: 10px;
+	padding-right: 10px;
 
-	@media (max-width: 992px) {
-		padding-left: 0;
-		padding-right: 0;
-	}
+	// @media (max-width: 992px) {
+	// 	padding-left: 0;
+	// 	padding-right: 0;
+	// }
 	.title {
 		color: #ffffff;
 		font-size: 56px;
@@ -15,6 +15,9 @@
 		letter-spacing: 0%;
 		padding-top: 52px;
 		text-align: left;
+		@media (max-width: 1280px) {
+			padding-left: 5%;
+		}
 	}
 
 	.grid {
@@ -26,7 +29,15 @@
 		list-style: none;
 
 		@media (max-width: 1280px) {
+			width: 992px;
+			margin: 0 auto;
 			grid-template-columns: repeat(2, 1fr);
+			li:last-child:nth-child(odd) {
+				grid-column: 1 / -1;
+				display: flex;
+				justify-content: center;
+				width: 100%;
+			}
 		}
 
 		@media (max-width: 992px) {
@@ -35,8 +46,7 @@
 	}
 
 	.swiper_container {
-		padding: 52px 0 80px;
-		width: 100%;
+		padding: 52px 0;
 
 		.swiper {
 			width: 100%;
@@ -88,7 +98,8 @@
 
 	.cart {
 		cursor: pointer;
-		width: 400px;
+		width: 100%;
+		max-width: 400px;
 		height: 190px;
 		display: flex;
 		flex-direction: column;
@@ -143,7 +154,9 @@
 }
 
 .services_container {
-	margin-bottom: 0;
+	width: 100%;
+	max-width: 1280px;
+	margin: 0 auto;
 }
 
 // Адаптация для очень маленьких экранов
