--- a/src/components/one-service-page/blocks/styles.module.scss
+++ b/src/components/one-service-page/blocks/styles.module.scss
@@ -7,6 +7,9 @@
 	grid-template-columns: repeat(6, 1fr);
 	grid-template-rows: repeat(2, auto); /* Две строки */
 	gap: 40px;
+	@media (max-width: 768px) {
+		gap: 20px;
+	}
 }
 
 .block_grid__box1 {
@@ -17,6 +20,10 @@
 	grid-column: 1 / 4; /* Левая половина */
 	grid-row: 1 / 3; /* Занимает обе строки */
 	height: auto;
+	@media (max-width: 768px) {
+		grid-column: 1/7;
+		grid-row: 1/2;
+	}
 	h3 {
 		font-size: 25px;
 		padding-bottom: 25px;
@@ -43,6 +50,10 @@
 	grid-column: 4 / 7; /* Правая половина */
 	grid-row: 1 / 2; /* Только первая строка */
 	height: auto;
+	@media (max-width: 768px) {
+		grid-column: 1/7;
+		grid-row: 2/3;
+	}
 	h3 {
 		font-size: 25px;
 		padding-bottom: 25px;
@@ -67,6 +78,11 @@
 	grid-column: 1 / 4; /* Левая половина */
 	grid-row: 3 / 4; /* Новая строка под блоком 1 */
 	height: auto;
+	@media (max-width: 768px) {
+		grid-column: 1/7;
+		grid-row: 3/4;
+	}
+
 	h3 {
 		font-size: 25px;
 		padding-bottom: 25px;
@@ -75,9 +91,7 @@
 		font-size: 18px;
 		font-weight: 600;
 	}
-	p {
-		font-size: 19px;
-	}
+
 	ul {
 		padding-bottom: 25px;
 	}
@@ -93,6 +107,10 @@
 	grid-column: 4 / 7; /* Правая половина */
 	grid-row: 2 / 4; /* Занимает строки 2 и 3 */
 	height: auto;
+	@media (max-width: 768px) {
+		grid-column: 1/7;
+		grid-row: 4/5;
+	}
 	h3 {
 		font-size: 25px;
 		padding-bottom: 25px;
