--- a/src/components/services-page/Service/Service.scss
+++ b/src/components/services-page/Service/Service.scss
@@ -1,5 +1,7 @@
 .service {
 	padding-top: 90px;
+	padding-left: 10px;
+	padding-right: 10px;
 	@media (max-width: 1200px) {
 		padding-top: 70px;
 		margin: 0 10px;
@@ -16,6 +18,9 @@
 	font-size: 56px;
 	font-weight: 700;
 	line-height: 56px;
+	@media (max-width: 1280px) {
+		padding-left: 5%;
+	}
 }
 .service-body {
 }
